--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <label for="appt">Choose the time when you are reading this:</label>
 
       <input type="time" id="appt" name="appt"
-             min="00:00" max="24:00" required>
+             min="00:00" max="23:00" required>
 
       <small>Office hours are 9am to 6pm</small>
       
@@ -198,7 +198,7 @@
           </tr>
         </template>
 
-      <label for="more">Choose another number:</label>
+      <label>Choose another number:</label>
 
       <select name="others" id="others">
           <option value="">--Please choose an option--</option>
