--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <input type="number" name="heads" id="heads" required>
         </div>
         <div class="form-example">
-          <label">Enter how many times "Shoulders" is repeated in word form: </label>
+          <label>Enter how many times "Shoulders" is repeated in word form: </label>
           <input type="text" name="shoulders" id="shoulders" required
                    minlength="2" maxlength="20" size="10">
         </div>
@@ -183,7 +183,7 @@
       <label>Choose a number:</label>
         <input list="numbers" id="numbers" name="numbers" />
 
-        <datalist id="numbers">
+        <datalist id="numbe">
             <option value="one">
             <option value="two">
             <option value="three">
