--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       </form>
       
       <label>Choose a number:</label>
-        <input list="numbers" id="numbers" name="numbers" />
+        <input list="numbe" id="numbers" name="numbers" />
 
         <datalist id="numbe">
             <option value="one">
