--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     
-    <header>Song</header>
+    <header style="color:red;">Song</header>
     
     <nav class="crumbs">
       <ol>
