--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
+    a:hover { color: Red; }
+    a:active { color: Lime; }
   </head>
   <body>
     background-color: linen;
@@ -258,7 +260,18 @@
               <td>Super speed</td>
           </tr>
       </table>
+      
+      <ul class="flex-container">
+        <li class="flex-item">1</li>
+        <li class="flex-item">2</li>
+        <li class="flex-item">3</li>
+      </ul>
 
+      <div class="grid">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+      </div>
       
       <figure>
         <figcaption>Random audio</figcaption>
