--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
-    a:hover { color: Red; }
-    a:active { color: Lime; }
+    <style type="text/css">
+      a:hover { color: Red; }
+      a:active { color: Lime; }
+    </style>
   </head>
   <body>
     background-color: linen;
